Dockerized the app and create some instructions to run it